configs/k8s/base/elk/kibana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: elk
  labels:
    app: kibana
    component: logging
spec:
  type: ClusterIP
  ports:
    - port: 5601
      targetPort: 5601
      name: http
  selector:
    app: kibana
