configs/k8s/base/elk/logstash-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: logstash
  namespace: elk
  labels:
    app: logstash
    component: logging
spec:
  type: ClusterIP
  ports:
    - port: 5044
      targetPort: 5044
      name: beats
    - port: 9600
      targetPort: 9600
      name: metrics
  selector:
    app: logstash
